--- a/style.css
+++ b/style.css
@@ -1,32 +1,81 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Aclonica&display=swap');
 body{
+  height: 100vh;
   background-size: cover;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content:center;
 
 }
+.imagen-head{
+  height: 200px;
+}
+.iconos{
+  height: 8rem;
+}
+.title{
+  font-family: "Aclonica", sans-serif;
+  margin-bottom:730px;
+  position: absolute;
+  z-index: 1;
+}
 header{
-  margin-bottom: 20px;
+  z-index: 0;
+  margin-top: 0;
+  margin-bottom: 800px;
+  position: absolute;
+  height: 250px;
+  width: 100vw;
+}
+.menu-opciones{
+  margin-bottom: 100px;
   border-radius: 10px;
-  margin-top: 200px;
+  margin-top: 20px;
   height: 100px;
-  background-color: #9e0c39;
+  background-color: #e991ff;
   display: flex;
   align-items: center;
   justify-content: center;
   width:80vw;
 }
+#tarjeta{
+  border: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 18rem;
+  transition: 0.5s ease;
+}
+#tarjeta:hover{
+  transform: scale(1.1);
+  
+}
+#cards{
+  width: 80vw;
+  gap: 10px;
+ justify-content: space-evenly;
+ display: flex;
 
-a{
+}
+#inf{
   color: #ffffff;
-  background-color: #9e0c39;
+}
+#cal{
+  color: #ffffff;
+}
+#reg{
+  color: #ffffff;
+}
+#opcion{
+  background-color: #e991ff;
   margin: 2%;
   transition:all 0.5s ease;
 }
-a:hover{
+#opcion:hover{
   color: rgba(19, 19, 19,);
-  background-color: azure;
+  background-color: #efb7fd;
   padding-left: 50px;
   padding-right: 50px;
   padding-top: 20px;
