mejora de responsive

--- a/style.css
+++ b/style.css
@@ -321,3 +321,15 @@ header {
     width: 80%;
   }
 }
+@media(max-height:800px){
+  header{
+    margin-top: 100px;
+  }
+  .title{
+    margin-top: 130px;
+  }
+  #inicio{
+    margin-top: 160px;
+  }
+  
+}
