arreglos de media queris

--- a/style.css
+++ b/style.css
@@ -321,7 +321,8 @@ header {
     width: 80%;
   }
 }
-@media(max-height:800px){
+
+@media(max-height:800px) and (min-width: 781px){
   header{
     margin-top: 100px;
   }
