--- a/style.css
+++ b/style.css
@@ -124,6 +124,12 @@ tabla-informe {
   width: 90%;
   z-index: 2;
 }
+tabla-informe-lote {
+  display: flex;
+  justify-content: center;
+  width: 90%;
+  z-index: 2;
+}
 tabla-obra{
   display: flex;
   justify-content: center;
