--- a/style.css
+++ b/style.css
@@ -121,6 +121,7 @@ tabla-informe-costo {
 tabla-informe {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   width: 90%;
   z-index: 2;
 }
